# Engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  imgui.ini
assets/scripts/: config.lua  laser.lua  levelGoal.lua  levelsDefinition.lua  object.lua  player.lua  save.lua  saveComplete.lua  steering.lua  stressTest.lua  test2DScene.lua  vector.lua
assets/shaders/: blit.fs  blit.vs  color.fs  color.vs  depthDirectional.gs  depthDirectional.vs  depthPositional.fs  depthPositional.gs  depthPositional.vs  line.gs  line.vs  lit.fs  lit.vs  pbr.fs  pbr.vs  skybox.fs  skybox.vs  sprite.fs  sprite.vs  terrain.fs  terrain.vs  text.fs  text.vs  text_alt.fs  text_alt.vs  texture.fs  texture.vs  tileLayer.fs  tileLayer.vs  wireframe.fs  wireframe.vs  wobble.fs  wobble.vs
output/: test.csv  test_2019_03_25_19_35_49.csv  test_2019_03_25_21_11_48.csv  test_2019_03_26_12_27_43.csv  test_2019_03_26_12_46_10.csv  test_2019_03_26_12_50_24.csv  test_2019_03_26_12_56_44.csv  test_2019_03_26_13_58_28.csv  test_2019_03_26_14_00_04.csv  test_2019_03_26_14_04_42.csv  test_2019_03_26_19_54_38.csv  test_2019_03_26_20_22_46.csv  test_2019_03_26_20_31_25.csv  test_2019_03_26_22_55_35.csv  test_2019_03_26_23_02_44.csv  test_2019_03_28_16_35_21.csv  test_2019_03_28_17_05_33.csv  test_2019_03_30_21_55_13.csv  test_2019_03_30_21_57_19.csv  test_2019_03_31_13_06_59.csv  test_2019_03_31_19_17_42.csv  test_2019_03_31_19_22_16.csv  test_2019_03_31_19_23_43.csv  test_2019_04_01_19_29_36.csv  test_2019_04_01_23_17_37.csv  test_2019_04_02_20_48_26.csv  test_2019_04_04_18_05_20.csv  test_2019_04_09_20_41_00.csv  test_2019_04_13_21_51_07.csv  test_2019_04_13_21_51_07.xlsx  test_2019_04_21_20_27_01.csv  test_2019_04_22_18_43_45.csv  test_2019_04_22_18_55_18.csv  test_2019_04_22_18_55_18.xlsx  test_2019_04_23_00_07_21.csv
src/: glm.h  glm.hpp  main.cpp
src/engine/: Engine.cpp  Engine.h  Rigidbody.cpp  State.h
src/project2D/: AIController.cpp  AIController.h  AITestingScene.cpp  AITestingScene.h  CameraControls2DSystem.cpp  CameraControls2DSystem.h
src/scenes/: CollisionDetectionTestScene.cpp  CollisionDetectionTestScene.h  GLTestScene.cpp  GLTestScene.h  LightingScene.cpp  LightingScene.h  PhysicsTestBodyGenerator.cpp  PhysicsTestScene.cpp  (+8 more)
(+441 files in other folders)
